syntax = "proto3";

package ping;

option go_package = "grpc-ping/proto";

service Utils {
  rpc Ping (PingRequest) returns (PongResponse) {}
  rpc GetVersion (VersionRequest) returns (VersionResponse) {}
}

message PingRequest {
  string message = 1;
}

message PongResponse {
  string message = 1;
  int64 timestamp = 2;
}

message VersionRequest {}

message VersionResponse {
  string version = 1;
}